# wifi-view

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  leer_serial.py  pyproject.toml  radar.py  requirements.txt  ruvector.db  servidor_websocket.py  test_udp.py
.claude-flow/: .trend-cache.json  daemon-state.json
.github/workflows/: aether-arena-harness.yml  bfld-mqtt-integration.yml  cd.yml  ci.yml  clone-tracking.yml  cog-ha-matter-release.yml  dashboard-a11y.yml  dashboard-pages.yml  desktop-release.yml  firmware-ci.yml  firmware-qemu.yml  fix-regression-guard.yml  mqtt-integration.yml  nvsim-server-docker.yml  pip-release.yml  pointcloud-pages.yml  ruview-swarm-ci.yml  security-scan.yml  sensing-server-docker.yml  threejs-pages.yml  update-submodules.yml  verify-pipeline.yml
docker/: Dockerfile.rust
firmware/esp32-hello-world/: sdkconfig
nvsim/: sw.js.map
scripts/: align-ground-truth.js  record-csi-udp.py
tools/ruview-cli/: package-lock.json  package.json
tools/ruview-mcp/: README.md  package-lock.json  package.json
ui/components/: DashboardTab.js
ui/config/: api.config.js
ui/mobile/: package-lock.json  package.json
ui/services/: model.service.js  (+3 more)
v2/: Cargo.toml
v2/crates/ruview-swarm/: Cargo.toml  README.md
v2/crates/ruview-swarm/benches/: swarm_bench.rs
v2/crates/ruview-swarm/evals/: .gitkeep  RESULTS.md
v2/crates/ruview-swarm/src/: bench_support.rs  lib.rs  types.rs
v2/crates/ruview-swarm/src/allocation/: auction.rs  fnn.rs  mod.rs
v2/crates/ruview-swarm/src/config/: mod.rs
v2/crates/ruview-swarm/src/demo/: mod.rs  scenario.rs  synthetic_csi.rs
v2/crates/ruview-swarm/src/evals/: gdop.rs  metrics.rs  mod.rs  report.rs  runner.rs  stats.rs
v2/crates/ruview-swarm/src/failsafe/: mod.rs
v2/crates/ruview-swarm/src/formation/: leader_follower.rs  mod.rs  reynolds.rs  virtual_structure.rs
v2/crates/ruview-swarm/src/integration/: flight_controller.rs  mavlink_messages.rs  mission_report.rs  mod.rs  swarm_sim.rs  telemetry.rs
v2/crates/ruview-swarm/src/marl/: actor.rs  candle_ppo.rs  learning.rs  mod.rs  observation.rs  reward.rs  role_attention.rs  trainer.rs  training_loop.rs
v2/crates/ruview-swarm/src/orchestrator/: mod.rs
v2/crates/ruview-swarm/src/planning/: coverage.rs  mod.rs  patterns.rs  pheromone.rs  probability_grid.rs  rrt_apf.rs
v2/crates/ruview-swarm/src/ruflo/: backend.rs  http_backend.rs  mission_summary.rs  mock_backend.rs  mod.rs
v2/crates/ruview-swarm/src/security/: antijamming.rs  geofence.rs  mavlink_signing.rs  mod.rs  uwb_antispoofing.rs
v2/crates/ruview-swarm/src/sensing/: mod.rs  multiview.rs  occworld_bridge.rs  payload.rs
v2/crates/ruview-swarm/src/topology/: gossip.rs  mesh.rs  mod.rs  raft.rs
v2/crates/ruview-swarm/viz/: sample_levy.jsonl  sample_pheromone.jsonl  sample_potential.jsonl  sample_spiral.jsonl  sample_telemetry.jsonl  swarm_viz.html
v2/crates/wifi-densepose-geo/: Cargo.toml  README.md
v2/crates/wifi-densepose-geo/examples/: validate.rs
v2/crates/wifi-densepose-geo/src/: brain.rs  cache.rs  coord.rs  fuse.rs  lib.rs  locate.rs  osm.rs  register.rs  temporal.rs  terrain.rs  tiles.rs  types.rs
v2/crates/wifi-densepose-geo/tests/: geo_test.rs
(+139 files in other folders)
